<resources>
    <string name="app_name">kHelper</string>
    <string name="mathBtnText">Math</string>
    <string name="infoBtnText">Info</string>
    <string name="author" translatable="false">KoreN-</string>
    <string name="infoText">Author :</string>
    <string name="quadratic_equation_text">Quadratic Equation</string>
    <string name="quadEquationText">ax^2+bx+c=0 equation solving</string>
    <string name="enterAText">Enter coefficient a :</string>
    <string name="enterBText">Enter coefficient b :</string>
    <string name="enterCText">Enter coefficient c :</string>
    <string name="solveItText">Solve It!</string>
    <string name="noSolutions">Equation has no solutions</string>
    <string name="aEquals0">A mustn\'t equal 0</string>
    <string name="kmhToMs">Km/H to M/S</string>
    <string name="convertBtnText">Convert!</string>
    <string name="kmHtext">Km/h</string>
    <string name="MsText">m/s</string>
    <string name="physicsText">Physics</string>
    <string name="wordInverterBtn">Word Inverter</string>
    <string name="otherBtn">Other</string>
    <string name="enterWordTxt">Enter word(s)</string>
    <string name="invertBtnText">Invert!</string>
</resources>
