<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.koren.khelper.QuadraticEquationActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:text="@string/quadEquationText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/enterAText"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/aEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/textView4"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/bEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/cEditText"
            android:layout_below="@+id/aEditText"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <EditText
            android:id="@+id/cEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/aEditText"
            android:layout_below="@+id/aEditText"
            android:layout_marginTop="67dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignTop="@+id/bEditText"
            android:text="@string/enterBText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cEditText"
            android:layout_alignBottom="@+id/cEditText"
            android:layout_alignEnd="@+id/textView5"
            android:text="@string/enterCText"
            android:textSize="24sp" />

        <Button
            android:id="@+id/solveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:onClick="solveIt"
            android:text="@string/solveItText" />

        <TextView
            android:id="@+id/resultsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/solveBtn"
            android:layout_marginTop="32dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
