<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.koren.khelper.kmhToMs_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="52dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="103dp"
            android:layout_toStartOf="@+id/inputField"
            android:text="@string/kmHtext"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView9"
            android:layout_marginBottom="195dp"
            android:text="@string/MsText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/convertBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/inputField"
            android:layout_below="@+id/inputField"
            android:layout_marginTop="44dp"
            android:onClick="convert"
            android:text="@string/convertBtnText" />

        <TextView
            android:id="@+id/outPutTextV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
